--- a/natrave/index.html
+++ b/natrave/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;700&display=swap" rel="stylesheet"> 
     <title>NaTrave App</title>
-    <link rel="icon" type="image/x-icon" href="./src/assets/imgs/bandeiras/bra.png">
+    <link rel="icon" type="image/x-icon" href="./public/imgs/logo/favicon.svg">
   </head>
   <body>
     <div id="root"></div>
